<resources>
    <string name="app_name">Elderoid</string>
    <string name="weather_sunny">It\'s a sunny day</string>
    <string name="weather_sunny_cloudy">The sun shines, but with some clouds</string>
    <string name="weather_cloudy">The sun is covered by some clouds</string>
    <string name="weather_heavy_cloudy">The sun is covered by black clouds</string>
    <string name="weather_rainy">It\'s a rainy day</string>
    <string name="weather_sunny_rainy">The sun shines, but with some rain</string>
    <string name="weather_stormy">It\'s storming</string>
    <string name="weather_snowy">It\'s snowing</string>
    <string name="weather_misty">It\'s fog</string>
    <string name="forecast_sunny">%s will be one sunny day</string>
    <string name="forecast_sunny_cloudy">%s will be a sunny day, but with some clouds</string>
    <string name="forecast_cloudy">%s, the sun will be covered by some clouds</string>
    <string name="forecast_heavy_cloudy">%s, the sun will be covered by black clouds</string>
    <string name="forecast_rainy">%s will be a day of rain</string>
    <string name="forecast_sunny_rainy">%s, the sun will shine, but with some rain</string>
    <string name="forecast_stormy">%s will be a day of storm</string>
    <string name="forecast_snowy">%s, snow will fall</string>
    <string name="forecast_misty">%s will be a foggy day</string>
    <string name="config_choose_lang">Choose language</string>
    <string name="config_lang">Welcome!</string>
    <string name="config_calls">If you wish to phone your family and friends, this feature is essential!</string>
    <string name="config_contacts">With this feature, you will be able to save the phone number of your favourite people.</string>
    <string name="config_messages">If you\'d like to send messages to your friends and family, accept this feature!</string>
    <string name="config_apps_1">If you like games, this feature is for you!</string>
    <string name="config_apps_2">With this feature, you will be able to use social media too.</string>
    <string name="config_weather">If you use this feature, you will know what the weather will be for the following days.</string>
    <string name="config_news">With this feature, I can show you articles about cooking, for example! Or sports!</string>
    <string name="config_photos">This feature allows you to take photographs of your favourite people and things!</string>
    <string name="config_flashlight">If you run out of light, you can use this feature.</string>
    <string name="config_welcome_1">Hello! My name is Netie, and I will help you configure Elderoid. Click on the button to continue.</string>
    <string name="config_welcome_2">Whenever you want, you can click on me for help.</string>
    <string name="config_welcome_3">That\'s it! Very good.</string>
    <string name="config_welcome_4">Alright, you can stop now.</string>
    <string name="config_welcome_5">Please, you are hurting me&#8230;</string>
    <string name="config_welcome_6">Just kidding! You can click on me as much as you want!</string>
    <string name="config_user_1">What should I call you? First name is enough.</string>
    <string name="config_user_2">You can choose your language too.</string>
    <string name="config_username_error">Write a name at least 3 characters long.</string>
    <string name="config_features_1">Very well, %s. Now I\'ll show you some features. Accept only the ones you wish to use.</string>
    <string name="config_features_2">If all you want to do is make phone calls, you only have to accept that feature.</string>
    <string name="config_features_3">You can select more features later, if you don\'t want to try all of them now!</string>
    <string name="config_temp_scale_1">Click the switch to change the temperature scale.</string>
    <string name="config_temp_scale_2">On the left you select degrees Celsius, and on the right degrees Fahrenheit.</string>
    <string name="config_news_topics_1">Choose the topics you want the news to be about.</string>
    <string name="config_news_topics_2">You can also add a topic of your choice.</string>
    <string name="config_choose_apps_1">Here you can choose the installed apps that will be available in the application. Games, for example.</string>
    <string name="config_choose_apps_2">These are all the applications that are installed. Choose the ones you want to see inside Elderoid.</string>
    <string name="config_choose_apps_3">I have some game suggestions for you. Do you want to take a look?</string>
    <string name="config_apps_add">Do you want to install new games or applications?</string>
    <string name="config_permissions_1">Now you will have to provide some permissions for the application to work correctly.</string>
    <string name="config_permissions_2">Several text boxes will appear. You have to accept everything for Elderoid to work properly.</string>
    <string name="config_permissions_not_yet">You haven\'t provided the necessary permissions yet. Click on the button to allow.</string>
    <string name="config_permissions_granted">Permissions obtained.</string>
    <string name="config_permissions_not_granted">Permissions not obtained.</string>
    <string name="config_launcher_1">We\'re almost there! Click the configure button and select Elderoid as the default Launcher App.</string>
    <string name="config_launcher_2">Select Elderoid as Home App.</string>
    <string name="config_launcher_3">If you are using an older device, you may have to go to settings manually.</string>
    <string name="config_launcher_default_apps_settings">We\'re so close! Click the configure button and select Elderoid as the default Launcher App.</string>
    <string name="config_launcher_not_yet">You haven\'t configured the Home App yet. You have to choose the Elderoid option.</string>
    <string name="config_launcher_already">It\'s already set up. You can continue.</string>
    <string name="config_proceed">You can continue.</string>
    <string name="config_finish">It\'s done! You can start using Elderoid.</string>
    <string name="config_error">An error has occurred. You have to configure it again.</string>
    <string name="config_accept_reject">Click %s to use this feature. Click %s otherwise.</string>
    <string name="permission_list">Elderoid will:\n\t1. Access contacts;\n\t2. Make and manage phone calls;\n\t3. Access camera;\n\t4. Access location;\n\t5. Access photos and media.</string>
    <string name="elderoid_will">Elderoid will:</string>
    <string name="calendar">If you like, choose a day and write a reminder. Then click on the button to add.</string>
    <string name="the_time_is">It\'s</string>
    <string name="choose_app_1">Choose an app to open.</string>
    <string name="choose_app_2">This is where you can choose a game to play!</string>
    <string name="choose_app_3">Do you want to add new apps?</string>
    <string name="call_log_1">Click on a call to see the details.</string>
    <string name="call_log_2">Do you want to see only the calls you missed?</string>
    <string name="no_call_log">You haven\'t made a call yet. Do you want to call someone?</string>
    <string name="missed_calls_1">Click on the phone button to call back.</string>
    <string name="missed_calls_2">Do you want to see all the calls, including the ones you answered?</string>
    <string name="no_missed_calls">You have no missed calls!</string>
    <string name="call_contact_1">Who do you want to call? Click on the phone symbol.</string>
    <string name="call_contact_2">Choose someone to call, and tell them the news!</string>
    <string name="call_contact_3">Do you want to add a new contact?</string>
    <string name="added_contact">Contact added!</string>
    <string name="removed_contact">Contact removed!</string>
    <string name="no_contacts">You have no contacts saved. Do you want to add one?</string>
    <string name="add_contact_1">To add a contact, you just have to write the name and the phone number.</string>
    <string name="add_contact_2">That way, you can call someone without having to dial the number!</string>
    <string name="dial_number">Enter the phone number you want to call.</string>
    <string name="phone_contact">Do you wish to call a known contact?</string>
    <string name="gallery_1">What beautiful pictures! Click one of them to open it.</string>
    <string name="gallery_2">Do you want to take a new photo?</string>
    <string name="no_photos">You don\'t have any photos saved. Do you want to take one?</string>
    <string name="photo_saved_menu">Photo saved! Do you want to see it in the gallery?</string>
    <string name="photo_saved_gallery">Photo saved!</string>
    <string name="forecast_1">Click on a day and I\'ll tell you what the weather will be.</string>
    <string name="forecast_2">This is the weather forecast for the coming days in your area.</string>
    <string name="news_1">Here\'s where you can read some news!</string>
    <string name="news_2">Click on a new to see the full article.</string>
    <string name="news_3">These news are boring you? You can change the topics.</string>
    <string name="settings_1">If you don\'t know what you\'re doing, go back. This could break Elderoid.</string>
    <string name="settings_2">Here you can change some aspects of Elderoid. I advise you to ask someone for help.</string>
    <string name="missed_calls">You have some missed calls. Want to see who called you?</string>
    <string name="photo_zoom">To zoom, put two fingers on the picture, and push them away from each other.</string>
    <string name="photo_good">This is a great photo!</string>
    <string name="new_games">Do you want to try new games?</string>
    <string name="game_suggestions">Here are some game suggestions. Click install to try one.</string>
    <string name="click_see_more">Click see more to search for more games.</string>
    <string name="do_you_want_to_install">Do you want to install?</string>
    <string name="day_went_well">Good! I\'m glad you\'re happy.</string>
    <string name="day_went_bad">Oh no! Don\'t worry, tomorrow will be better.</string>
    <string name="format_outgoing_call">Call sent to %s on %s at %s. Lasted %s.</string>
    <string name="format_incoming_call">Call received from %s on %s at %s. Lasted %s.</string>
    <string name="format_missed_call">Missed call from %s on %s at %s.</string>
    <string name="weather_temperature">It\'s %s, in your region</string>
    <string name="want_to_see_tomorrow_weather">Do you want to see the weather for tomorrow?</string>
    <string name="i_can_help_you">Remember, you can click on me for help!</string>
    <string name="topic_added">Topic added!</string>
    <string name="topic_removed">Topic removed!</string>
    <string name="your_name_is_now">Your name is now %s!</string>
    <string name="click_to_see_more">Click to see more.</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="cue_call">Do you want to dial a number to call?</string>
    <string name="cue_contacts">Do you want to call someone you know?</string>
    <string name="cue_weather">How is the weather going to be this week?</string>
    <string name="cue_camera">Do you want to take a picture?</string>
    <string name="cue_apps">Feel like playing a game?</string>
    <string name="title_config_name">Your name</string>
    <string name="title_config_launcher">Configure Home App</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="category_social">Social Networks</string>
    <string name="category_game">Games</string>
    <string name="category_other">Other</string>
    <string name="proceed">Continue</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="phone">Telephone</string>
    <string name="language">Language</string>
</resources>