<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/netie_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_19sdp"
            android:background="@drawable/rounded_button_clickable"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:text="@string/title_add_contact"
            android:textSize="@dimen/_22ssp"
            android:textColor="@color/text"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:ems="12"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="29"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:layout_marginBottom="@dimen/_19sdp"
            android:ems="12"
            android:hint="@string/phone"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toTopOf="@+id/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19sdp"
            android:background="@drawable/rounded_button_clickable"
            android:padding="@dimen/_10sdp"
            android:text="@string/add"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/netie_window"
        android:id="@+id/netie_window">
    </include>

</androidx.constraintlayout.widget.ConstraintLayout>